FairnessQualityReport: split popularity by student type + simplify popularity class